--- a/views/index.ejs
+++ b/views/index.ejs
@@ -2,7 +2,7 @@
 <html>
   <head>
     <meta charset="utf-8">
-    <title>Sample NodeJS App</title>
+    <title>Sample NodeJS App 2</title>
     <link rel="stylesheet" href="public/resources/css/bootstrap.min.css" />
     <link rel="stylesheet" href="public/resources/css/app.css" />
   </head>
